# void-quest

./: Cargo.toml  LICENSE  README.md  build.rs  build.sh
.claude/: settings.local.json
config/: classes.json  items.json  locale.toml  monsters.json  spells.json  world.toml
cpp/: vqwidget.cpp  vqwidget.h
src/: lib.rs  protocol.rs  server.rs
src/client/: app.rs  bridge.rs  mod.rs  net.rs  state.rs
src/config/: defaults.rs  locale.rs  mod.rs
src/engine/: actions.rs  ai.rs  events.rs  loot.rs  mod.rs
src/entity/: class.rs  item.rs  mod.rs  monster.rs  player.rs  spell.rs
src/mapgen/: helpers.rs  mod.rs
src/server/: session.rs
src/world/: combat.rs  map.rs  mod.rs  pos.rs  stats.rs  tile.rs
