[package]
name       = "void-quest"
version    = "0.1.0"
edition    = "2021"
description = "VoidQuest — MMO RPG"

[[bin]]
name = "vq-server"
path = "src/bin/server.rs"

[[bin]]
name = "vq-client"
path = "src/bin/client.rs"

[lib]
name = "void_quest"
path = "src/lib.rs"

[dependencies]
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
cxx        = "1"
anyhow     = "1"
rand       = "0.8"
uuid       = { version = "1", features = ["v4"] }
toml       = "0.8"

[build-dependencies]
cxx-build = "1"
